--- a/style/style.css
+++ b/style/style.css
@@ -35,13 +35,32 @@ body {
 
 .grid-item-text {
   font-family: "Josefin Sans", sans-serif;
-  font-size: 12.5vw;
-  line-height: 12.5vw;
+  font-size: 5vw;
+  line-height: 5vw;
   transition: transform 0.5s ease-out, color 0.5s ease-out;
   text-align: center;
 }
 
-.center .grid-item-text {
-  color: white;
-  transform: scale(1.5);
+.size0 .grid-item-text {
+  transform: scale(1.7);
+}
+
+.size10 .grid-item-text {
+  transform: scale(1.6);
+}
+
+.size15 .grid-item-text {
+  transform: scale(1.4);
+}
+
+.size20 .grid-item-text {
+  transform: scale(1.3);
+}
+
+.size25 .grid-item-text {
+  transform: scale(1.2);
+}
+
+.size30 .grid-item-text {
+  transform: scale(1.1);
 }
